* Add shortcut to focus search entry
* Add binary field to tree views
* Improve board view:
    - use the same search widget as form
    - link double click to open popup

Version 2.2.0 - 2011-10-24
* Bug fixes (see mercurial logs for details)
* New search widget
* Improve memory management of Binary fields
* Support buffer for Binary fields
* Remove delete on Escape in editable tree
* Use JSON-RPC
* Limit size of field when possible
* Add xalign and yalign as fields attributes
* Convert many popup to be no-modal
* Add window manager for:
    - replace current window
    - prevent simmilar window
* Merge and review toolbars in form and board
* Drop support of Python 2.5
* Use the same design for Many2Many than One2Many
* Allow resize columns smaller than the header

Version 2.0.0 - 2011-04-26
* Bug fixes (see mercurial logs for details)
* Popup form dialog has 3 buttons (close, ok, new)
* New UI layout
* Add DnD on tree view
* Merge tree and list views
* Remove generic default value on right-click
* Made numpad locale aware
* Selection widget used for many2one dynamically change their content following
  the domain specification
* Add open button on binary and image widgets
* Hide buttons on image widget if readonly
* Added a connection manager à la gajim
* Fix warning in wizards
* Added possibility to use server-side icons
* Added additional gtk.Entry for filename on BinaryField
* Display deleted lines in One2Many and Many2Many
* Handle URL
* Add communication between boards
* Added domain inversion feature
* Handle loading attribute on fields
* Use default format for value in wizard form
* Add One2One field

Version 1.8.0 - 2010-11-01
* Bug fixes (see mercurial logs for details)
* More fully integrate GTK menubar for Mac OS
* Allow to configure search limit
* Add Previous/Next on list view
* Set non-applicable form controls in one2many view to be insensitive

Version 1.6.0 - 2010-05-08
* Bug fixes (see mercurial logs for details)